# vivalaboard

./: .env  .flake8  README.md  app.py  config.py  db.py  pyproject.toml  report.xml  up.sh
.github/workflows/: ci-cd.yml
auth/: model.py  router.py  schema.py  services.py
core/: auth.py
docker/: db-init.sh  docker-compose.yml
docker/data/: init.sql
posts/: model.py  router.py  schema.py  services.py
tests/users/: conftest.py  test_router.py
users/: model.py  router.py  schema.py  services.py
