[tool.poetry]
name = "vivalaboard"
version = "0.1.0"
description = ""
authors = ["icehongssii12345 <icehongssii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
requests = "^2.31.0"
pydantic = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
